SUBDIRS = lib src include skin resource po 

EXTRA_DIST = config.rpath  m4/ChangeLog  LICENSE License.OpenSSL 

install: install-recursive
	@echo "------------------------------------------------------------";
	@echo "|                                                          |";
	@echo "|       OpenFetion 2.0 by lwp(levin108@gmail.com)          |";
	@echo "|                                                          |";
	@echo "| OpenFetion is a Fetion client for linux based on GTK+2.0,|";
	@echo "| implementing Fetion Protocol Version 4. It supports most |";
	@echo "| features of Fetion. What's more, it's lightweight        |";
	@echo "| and efficient with intuitive interface.                  |";
	@echo "| More information at http://basiccoder.com/openfetion     |";
	@echo "------------------------------------------------------------";

ACLOCAL_AMFLAGS = -I m4
