SUBDIRS = openfetion

EXTRA_DIST = fx_add_group.h \
			 fx_addbuddy.h \
			 fx_app.h \
			 fx_bottom.h \
			 fx_chat.h \
			 fx_code.h \
			 fx_dsms.h \
			 fx_edit.h \
			 fx_gedit.h \
			 fx_head.h \
			 fx_history.h \
			 fx_include.h \
			 fx_login.h \
			 fx_lookup.h \
			 fx_lookupres.h \
			 fx_main.h \
			 fx_many.h \
			 fx_myself.h \
			 fx_profile.h \
			 fx_emotion.h \
			 fx_set.h \
			 fx_tree.h \
			 fx_types.h \
			 fx_proxy.h \
			 fx_share.h \
			 fx_sound.h \
			 fx_sysmsg.h \
			 fx_util.h 
