resourcedir = $(pkgdatadir)/resource
resource_DATA = city.xml \
		province.xml \
		newmessage.wav
desktopdir = $(prefix)/share/applications
desktop_DATA = openfetion.desktop
EXTRA_DIST = $(resource_DATA) $(desktop_DATA)

#
#all:
#	@echo "[Desktop Entry]" > openfetion.desktop
#	@echo "Icon=$(pkgdatadir)/skin/fetion.svg" >> openfetion.desktop
#	@echo "Name=OpenFetion" >> openfetion.desktop
#	@echo "Name[en_GB]=OpenFetion" >> openfetion.desktop
#	@echo "Name[zh_CN]=飞信(OpenFetion)" >> openfetion.desktop
#	@echo "Comment=Fetion For Linux" >> openfetion.desktop
#	@echo "Comment[zh_CN]=Linux 版飞信客户端" >> openfetion.desktop
#	@echo "Exec=openfetion" >> openfetion.desktop
#	@echo "StartupNotify=true" >> openfetion.desktop
#	@echo "Terminal=false" >> openfetion.desktop
#	@echo "Type=Application" >> openfetion.desktop
#	@echo "Categories=Network;InstantMessaging;" >> openfetion.desktop
