SUBDIRS=face_images
skindir = $(pkgdatadir)/skin
skin_DATA = bg.jpg \
			bigimage.png \
			delete.png \
			directsms.png \
			edit.png \
			fetion.svg \
			find.png \
			pggroup.png \
			history.png \
			hilight.png \
			home.png \
			move.png \
			LoadingImage.gif \
			login.png \
			myselfsms.png \
			nudge.png \
			add.png \
			options.png \
			phone.png \
			profile.png \
			refresh.png \
			groupsend.png \
			user_away.png \
			user_busy.png \
			user_invisible.png \
			user_offline.png \
			user_online.png \
			warning.svg \
			emotion.png \
			online.svg \
			busy.svg \
			offline.svg \
			away.svg \
			invisible.svg \
			proxy.png
EXTRA_DIST = $(skin_DATA)
