SUBDIRS=face_images
skindir = $(pkgdatadir)/skin
skin_DATA = bigimage.png \
			delete.png \
			directsms.png \
			edit.png \
			exit.png \
			fetion.svg \
			find.png \
			pggroup.png \
			history.png \
			hilight.png \
			home.png \
			move.png \
			LoadingImage.gif \
			logining.gif \
			reconnecting.gif \
			login.png \
			myselfsms.png \
			nudge.png \
			add.png \
			options.png \
			phone.png \
			profile.png \
			refresh.png \
			groupsend.png \
			warning.svg \
			emotion.png \
			online.svg \
			busy.svg \
			offline.svg \
			away.svg \
			invisible.svg \
			portrait.png \
			proxy.png
pixmapdir = $(prefix)/share/pixmaps
pixmap_DATA = fetion.svg
EXTRA_DIST = $(skin_DATA)
