include_HEADERS = fetion_buddylist.h \
		  fetion_config.h \
		  fetion_connection.h \
		  fetion_contact.h \
		  fetion_conversation.h \
		  fetion_debug.h \
		  fetion_history.h \
		  fetion_list.h \
		  fetion_login.h \
		  fetion_message.h \
		  fetion_sip.h \
		  fetion_types.h \
		  fetion_share.h \
		  fetion_user.h \
		  fetion_directsms.h \
		  fetion_group.h \
		  openfetion.h
