emodir = $(pkgdatadir)/skin/face_images
emo_DATA = 1.gif  2.gif  3.gif  4.gif  5.gif  6.gif \
		   7.gif  8.gif  9.gif  10.gif  11.gif  12.gif \
		   13.gif  14.gif  15.gif  16.gif  17.gif  18.gif \
		   19.gif  20.gif  21.gif  22.gif  23.gif  24.gif \
		   25.gif  26.gif  27.gif  28.gif  29.gif  30.gif \
		   31.gif  32.gif  33.gif  34.gif  35.gif  36.gif \
		   37.gif  38.gif  39.gif  40.gif  41.gif  42.gif \
		   43.gif  44.gif  45.gif  46.gif  47.gif  48.gif \
		   49.gif  50.gif  51.gif  52.gif \
		   big_1.gif  big_2.gif  big_3.gif  big_4.gif  big_5.gif  big_6.gif \
		   big_7.gif  big_8.gif  big_9.gif  big_10.gif  big_11.gif  big_12.gif \
		   big_13.gif  big_14.gif  big_15.gif  big_16.gif  big_17.gif  big_18.gif \
		   big_19.gif  big_20.gif  big_21.gif  big_22.gif  big_23.gif  big_24.gif \
		   big_25.gif  big_26.gif  big_27.gif  big_28.gif  big_29.gif  big_30.gif \
		   big_31.gif  big_32.gif  big_33.gif  big_34.gif  big_35.gif  big_36.gif \
		   big_37.gif  big_38.gif  big_39.gif  big_40.gif  big_41.gif  big_42.gif \
		   big_43.gif  big_44.gif  big_45.gif  big_46.gif  big_47.gif  big_48.gif \
		   big_49.gif  big_50.gif  big_51.gif  big_52.gif 
EXTRA_DIST = $(emo_DATA)
